// GH Copilot code - starts
using API.Models;

namespace API.Services
{
    public interface IEmailService
    {
        void SendVerificationEmail(User user);
    }
}
// GH Copilot code - end
