// GH Copilot code - starts
namespace API.Services
{
    public interface IPasswordHasher
    {
        string HashPassword(string password);
    }
}
// GH Copilot code - end
