// GH Copilot code - starts
using API.Models;

namespace API.Services
{
    public interface IUserRegistrationService
    {
        UserRegistrationResponse RegisterUser(UserRegistrationRequest request);
    }
}
// GH Copilot code - end
