// GH Copilot code - starts
using API.Models;

namespace API.Services
{
    public interface IUserValidator
    {
        bool Validate(UserRegistrationRequest request);
    }
}
// GH Copilot code - end
