// GH Copilot code - starts
namespace API.UnitOfWork
{
    public interface IUnitOfWork
    {
        void Commit();
        void Rollback();
    }
}
// GH Copilot code - end
