# GH Copilot code - starts
"""
EmailService implementation for sending emails
"""
class User:
    def __init__(self, email, name):
        self.email = email
        self.name = name

class EmailService:
    def send_verification_email(self, user, token):
        # Simulate sending email
        return True
# GH Copilot code - end
